# rubber-duck

./: Cargo.toml  README.md  REVIEW.md  TODO.md
base/: Cargo.toml
base/src/: lib.rs
derive_builder_sugar/: Cargo.toml
derive_builder_sugar/src/: lib.rs  util.rs
derive_params_sugar/: Cargo.toml
derive_params_sugar/src/: args.rs  default.rs  lib.rs  util.rs
example_api/: Cargo.toml
example_api/src/: lib.rs
example_consumer/: Cargo.toml
example_consumer/src/: lib.rs
examples/: Cargo.toml
examples/src/: lib.rs
rubber_duck/: Cargo.toml  README.md
rubber_duck/src/: lib.rs
rubber_duck_builder/: Cargo.toml
rubber_duck_builder/src/: lib.rs
rubber_duck_macro/: Cargo.toml
rubber_duck_macro/src/: build.rs  builder.rs  call.rs  lib.rs  needs_use.rs  parse_fn.rs
rubber_duck_macro/src/call/: build.rs  parse_fn.rs
rubber_duck_params/: Cargo.toml
rubber_duck_params/src/: args.rs  build.rs  lib.rs  needs_use.rs  parse_fn.rs  util.rs
usage/: Cargo.toml
usage/src/: foo.rs  lib.rs
