[package]
name = "rubber_duck_macro"
version = "0.2.0"
authors = ["Sam Sieber <swsieber@gmail.com>"]
edition = '2018'
description = "The proc macros for the rubber-duck crate (macros for building named-arg functions)"
license = "MIT"
repository = "https://github.com/samsieber/rubber-duck"

[dependencies]
syn = { version = "0.15", features = ["full", "visit-mut", "visit", "extra-traits", "printing", "parsing"] }
proc-macro2 = { version = "0.4", features = ["nightly"] }
proc-macro-hack = "0.5"
quote = "0.6"

[features]
default = []
nightly = ["proc-macro2/nightly"]

[lib]
proc-macro = true
